tests/Parse/test_1_r10.out
Error type B at Line 4: Missing specifier
