tests/Parse/test_1_r10.spl
int test_1_r10()
{
  int a, b = 1;
  a = 10;
  int i = 0;
  while (i < a)
  {
    b = b + i;
    i = i + 1;
  }
}
